# fast-hot-reload

./: .gitignore  README.md  app.py  pyproject.toml
fast_hot_reload/: __init__.py
fast_hot_reload/arel/: __init__.py  _middleware.py  _models.py
fast_hot_reload/arel/data/: client.js
